--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <head>
 
     <title>F3ST4 FINAL</title>
-
+    <link rel="stylesheet" type="text/css" href="estilo.css"
 </head>
 <body>
 <h1>FESTA n1</h1>
+    <nav> 
+        <ul>
+            <li><a href=""><Menu></menu></a></li>
+           <li><a href=""><Menu></menu></a></li>
+            <li><a href=""><Menu></menu></a></li>
+                <li><a href=""><Menu>primero</menu></a></li>
+        </ul>
+    </nav>
 </body>
 <footer></footer>
