--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 
     <title>F3ST4 FINAL</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css"
+    <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
 <h1>FESTA n1</h1>
