--- a/pages/photos.html
+++ b/pages/photos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="Galeriadefotos.css">
+    <link rel="stylesheet" type="text/css" href="../styles/photos.css">
     <title>Galeria de Fotos</title>
 
 <h1>PROXIMAMENT...</h1>
